Add Namespace inside resource

--- a/deploy-dev.yml
+++ b/deploy-dev.yml
@@ -9,6 +9,7 @@
         resource_definition: |
           kind: Template
           apiVersion: template.openshift.io/v1
+          namespace: openshift
           metadata:
             name: php-laravel
             annotations:
