--- a/playbooks/deployer.yml
+++ b/playbooks/deployer.yml
@@ -13,11 +13,12 @@
     app_name: just_a_test
   tasks:
     - name: Create a k8s namespace
-      community.okd.k8s:
-        name: testing-okd
+      k8s:
+        name: testing-namespace
         api_version: v1
         kind: Namespace
         state: present    
+
     - name: Create a new Service
       k8s:
         state: present
@@ -111,6 +112,13 @@
 
         wait: yes
       register: vote_ui_dev_deployment
+    - name: Create a k8s namespace
+      community.okd.k8s:
+        name: testing-okd
+        api_version: v1
+        kind: Namespace
+        state: present    
+
     - name: Get the Deployment
       k8s_info:
         kind: DeploymentConfig
