--- a/playbooks/deployer.yml
+++ b/playbooks/deployer.yml
@@ -112,12 +112,12 @@
 
         wait: yes
       register: vote_ui_dev_deployment
-    - name: Create a k8s namespace
-      community.okd.k8s:
-        name: testing-okd
-        api_version: v1
-        kind: Namespace
-        state: present    
+    # - name: Create a k8s namespace
+    #   community.okd.k8s:
+    #     name: testing-okd
+    #     api_version: v1
+    #     kind: Namespace
+    #     state: present    
 
     - name: Get the Deployment
       k8s_info:
