add namespace to deployment

--- a/playbooks/deployer.yml
+++ b/playbooks/deployer.yml
@@ -35,6 +35,7 @@
     - name: Create a new deployment
       k8s:
         state: present
+        namespace: testing-namespace
         resource_definition: 
           kind: DeploymentConfig
           apiVersion: v1
