--- a/playbooks/deployer.yml
+++ b/playbooks/deployer.yml
@@ -10,11 +10,11 @@
   vars:
     deployment_environment: "development"
     app_debug: true
-    app_name: just_a_test
+    app_name: testing-namespace
   tasks:
     - name: Create a k8s namespace
       k8s:
-        name: testing-namespace
+        name: "{{ app_name }}"
         api_version: v1
         kind: Namespace
         state: present    
@@ -22,10 +22,10 @@
     - name: Create a new Service
       k8s:
         state: present
-        namespace: testing-namespace
+        namespace: "{{ app_name }}"
         resource_definition: |
           kind: ImageStream
-          namespace: testing-namespace
+          namespace: "{{ app_name }}"
           apiVersion: v1
           metadata:
             name: "{{ app_name }}"
