--- a/playbooks/deployer.yml
+++ b/playbooks/deployer.yml
@@ -115,7 +115,7 @@
     - name: Create a new deployment
       k8s:
         state: present
-        namespace: testing-namespace
+        namespace: "{{ app_name }}"
         resource_definition: |
           kind: DeploymentConfig
           apiVersion: v1
